devapps/demo/spec-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: webserver
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: web
