devapps/demo/spec-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`demo.larsnieuwenhuizen.nl`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: default
      services:
        - name: demo
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`demo.larsnieuwenhuizen.nl`)
      kind: Rule
      services:
        - name: demo
          port: 80
  tls:
    certResolver: le
